--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html> 
+       <head>
+              <title>My first webpage </title>
 
+              <meta charset="UTF-8">
+             <meta name="author" content="My name">
+             <meta name="keywords" content="HTML, CSS, JavaScript">
+             <meta name="revised" content="28-06-2020">
+
+             <link rel="icon" href="icon.png" type="image/gif">
+       </head>
+       <body>
+             
+       </body>
+</html>
