--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
               <title>My first webpage </title>
 
               <meta charset="UTF-8">
-             <meta name="author" content="My name">
+             <meta name="author" content="Stayc">
              <meta name="keywords" content="HTML, CSS, JavaScript">
              <meta name="revised" content="28-06-2020">
 
