--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
              <link rel="icon" href="icon.png" type="image/gif">
        </head>
        <body>
-         <!-- hi comment -->
+        <p>
+               skibid
+        </p>
        </body>
 </html>
