--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
               <title>My first webpage </title>
 
               <meta charset="UTF-8">
-             <meta name="author" content="Stayc">
+             <meta name="author" content="Stacey Sanchez">
              <meta name="keywords" content="HTML, CSS, JavaScript">
              <meta name="revised" content="28-06-2020">
 
              <link rel="icon" href="icon.png" type="image/gif">
        </head>
        <body>
-        <p>
                skibid
-        </p>
        </body>
 </html>
